<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="blank"></string>
    <string name="app_name">Laos WildScan</string>
    <string name="file_provider_authorities">org.freeland.wildscanlaos.fileprovider</string>
    <string name="sync_provider_authorities">org.freeland.wildscanlaos.syncprovider</string>
    <string name="sync_account_type">org.freeland.wildscanlaos.data.sync</string>
    <string name="action_synchronize">Synchronize data</string>
    <string name="action_info">Help &amp; Info</string>
    <string name="action_settings">Settings</string>
    <string name="info_title">Wildscan Info</string>
    <string name="info_about">About Wildscan</string>
    <string name="info_eula">End User License Agreement</string>
    <string name="info_consumer">General Advice for Consumers</string>
    <string name="info_responder">General Advice for First Responders</string>
    <string name="info_law_enforcement">General Advice for Law Enforcement</string>
    <string name="info_national_laws">National Wildlife Laws</string>
    <string name="info_contributors">Contributing Organizations</string>
    <string name="info_credits">Credits</string>
    <string name="info_help">Help</string>
    <string name="home_id_species_btn_desc">Identify Species Button on Home Screan</string>
    <string name="home_submit_report_btn_desc">Submit Report Button on Home Screan</string>
    <string name="home_species_lib_btn_desc">Species Library Button on Home Screan</string>
    <string name="home_contacts_btn_desc">Contacts Button on Home Screan</string>
    <string name="species_lib_header_title">Species Library</string>
    <string name="species_lib_header_btn_favorites">Favorites</string>
    <string name="species_lib_search_show_all">Show All</string>
    <string name="species_lib_header_btn_gallery">Gallery View</string>
    <string name="species_lib_header_btn_search">Search</string>
    <string name="species_lib_search_by_name_hint">Enter species name</string>
    <string name="species_lib_search_set_filter">Filter by type</string>
    <string name="species_lib_select_dlg_text">Select species for report or view species details?</string>
    <string name="species_lib_select_dlg_btn_select">Select species</string>
    <string name="species_lib_select_dlg_btn_details">View details</string>
    <string name="species_details_label_cites">CITES Appendix</string>
    <string name="species_details_label_cites_appendix_1">Appendix I</string>
    <string name="species_details_label_cites_appendix_2">Appendix II</string>
    <string name="species_details_label_cites_appendix_3">Appendix III</string>
    <string name="species_details_label_status">IUCN Red-list Status</string>
    <string name="species_details_label_status_lc">Least Concern</string>
    <string name="species_details_label_status_nt">Near Threatened</string>
    <string name="species_details_label_status_vu">Vulnerable</string>
    <string name="species_details_label_status_en">Endangered</string>
    <string name="species_details_label_status_cr">Critically Endangered</string>
    <string name="species_details_label_status_ew">Extinct in the Wild</string>
    <string name="species_details_label_status_ex">Extinct</string>
    <string name="species_details_label_status_na">Not Assessed</string>
    <string name="species_details_label_warning">Warnings</string>
    <string name="species_details_label_warning_disease_risk">disease risk</string>
    <string name="species_details_label_warning_disease_risk_low">Low</string>
    <string name="species_details_label_warning_disease_risk_medium">Medium</string>
    <string name="species_details_label_warning_disease_risk_high">High</string>
    <string name="species_details_label_warning_dangerous">Dangerous</string>
    <string name="species_details_label_warning_poisonous">Poisonous</string>
    <string name="species_details_label_warning_nocturnal">Nocturnal</string>
    <string name="species_details_label_id_clues">Identification Clues</string>
    <string name="species_details_label_similar">Similar Species</string>
    <string name="species_details_label_enforcement">Law Enforcement Advice</string>
    <string name="species_details_label_consumer">Consumer Advice</string>
    <string name="species_details_label_responder">First Responder Advice</string>
    <string name="species_details_label_traded_as">Traded as</string>
    <string name="species_details_label_common_methods">Common Trafficking Methods</string>
    <string name="species_details_label_aka">Also Known as</string>
    <string name="species_details_label_distribution">Distribution</string>
    <string name="species_details_label_size">Average Size and Weight</string>
    <string name="species_details_label_habitat">Habitat</string>
    <string name="species_details_label_diseases">Zoonotic Diseases</string>
    <string name="species_details_label_notes">Notes</string>
    <string name="species_details_photo_license">Photo license:\n%1$s</string>
    <string name="species_details_failed_set_fav">Failed setting favorite</string>
    <string name="species_details_no_images">No species image currently available</string>
    <string name="contacts_list_header_title">Contacts Directory</string>
    <string name="contacts_list_header_btn_favorites">Favorites</string>
    <string name="contacts_list_header_btn_search">Search</string>
    <string name="contacts_list_search_by_name_hint">Enter contact name</string>
    <string name="contacts_list_label_email">Email</string>
    <string name="contacts_list_label_phone">Phone</string>
    <string name="events_list_header_title">Events Listing</string>
    <string name="events_list_header_btn_favorites">Favorites</string>
    <string name="events_list_header_btn_show_on_map">Show on map</string>
    <string name="events_list_header_btn_view_more">View more</string>
    <string name="events_list_fragment_title">Recent Events</string>
    <string name="events_list_fragment_tag_on_home">EventsListFragmentOnHomeScreen</string>
    <string name="events_list_fragment_tag">EventsListFragment</string>
    <string name="events_list_loading_text">Retrieving events&#8230;</string>
    <string name="events_list_empty_text">No events</string>
    <string name="event_hint_country">Unknown Country</string>
    <string name="event_hint_date">Unknown Date</string>
    <string name="event_hint_species">Unspecified Species</string>
    <string name="event_hint_description">Incident description is empty</string>
    <string name="events_map_header_title">Events Map</string>
    <string name="events_map_header_btn_next">Next</string>
    <string name="events_map_header_btn_show_list">Show Listing</string>
    <string name="event_details_offense_label">Offense</string>
    <string name="event_details_address_label">Address</string>
    <string name="event_details_country_label">Country</string>
    <string name="event_details_datetime_label">Date and time</string>
    <string name="event_details_species_label">Species</string>
    <string name="event_details_amount_label">Amount</string>
    <string name="event_details_condition_label">Condition</string>
    <string name="event_details_unknown">Unknown</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="species_id_wizard_header_title">Identify Species</string>
    <string name="report_wizard_screen_1_title">Incident Report(1) - Main Photo</string>
    <string name="report_wizard_screen_2_title">Incident Report(2) - Basic Info</string>
    <string name="report_wizard_screen_3_title">Incident Report(3) - More Details</string>
    <string name="report_wizard_screen_4_title">Incident Report(4) - Review and Submit</string>
    <string name="report_wizard_location_pick_title">Incident Report - Pick Location</string>
    <string name="report_wizard_screen_1_capture_label">Take Photo</string>
    <string name="report_wizard_screen_1_browse_label">Choose Existing Photo</string>
    <string name="report_wizard_screen_2_time_label">Date &amp; Time</string>
    <string name="report_wizard_screen_2_location_label">Location</string>
    <string name="report_wizard_screen_2_offense_label">Offense</string>
    <string name="report_wizard_screen_2_offense_hint">Briefly describe the offense. For example: \'Selling protected reptiles\'</string>
    <string name="report_wizard_screen_2_species_label">Species</string>
    <string name="report_wizard_screen_2_species_hint">Type species common name</string>
    <string name="report_wizard_screen_2_amount_label">Amount</string>
    <string name="report_wizard_screen_2_amount_unit_label">individuals</string>
    <string name="report_wizard_screen_2_amount_weight_label">kg</string>
    <string name="report_wizard_screen_2_condition_label">Condition</string>
    <string name="report_wizard_screen_2_condition_alive_label">alive</string>
    <string name="report_wizard_screen_2_condition_dead_label">dead</string>
    <string name="report_wizard_screen_2_condition_mixed_label">mixed</string>
    <string name="report_wizard_screen_3_offense_details_label">Offense detailed description</string>
    <string name="report_wizard_screen_3_offense_details_hint">Provide a detailed description of the offense (up to 2048 characters)</string>
    <string name="report_wizard_screen_3_method_label">Method</string>
    <string name="report_wizard_screen_3_method_hint">Describe the methods used to commit the offense (up to 1024 characters)</string>
    <string name="report_wizard_screen_3_value_label">Value Estimate</string>
    <string name="report_wizard_screen_3_value_usd">$US</string>
    <string name="report_wizard_screen_3_zero_cents">.00</string>
    <string name="report_wizard_screen_3_route_label">Route</string>
    <string name="report_wizard_screen_3_origin_label">Origin</string>
    <string name="report_wizard_screen_3_destination_label">Destination</string>
    <string name="report_wizard_screen_3_vessel_label">Offending Vehicle/Vessel Details</string>
    <string name="report_wizard_screen_3_vessel_description_label">Description</string>
    <string name="report_wizard_screen_3_vessel_id_label">License #</string>
    <string name="report_wizard_screen_3_vessel_name_label">Vessel Name</string>
    <string name="report_wizard_screen_4_share_title">Share options</string>
    <string name="report_wizard_screen_4_add_contact">Add contact</string>
    <string name="report_wizard_screen_4_recipients_label">Contacts</string>
    <string name="report_wizard_screen_4_share_text">By default, your report will be sent to the Wildscan team which will forward it to the relevant authorities. You can add specific contacts that will receive the report.</string>
    <string name="report_wizard_screen_4_share_email_label">Share report via e-mail</string>
    <string name="report_wizard_screen_4_share_email_text">If checked, your e-mail client app will be opened with a new message containing the report details.</string>
    <string name="report_wizard_screen_4_photos_label">Photos</string>
    <string name="report_wizard_screen_4_add_photo_label">These photos will be included in the report. Click to add another photo (max. 3)</string>
    <string name="report_wizard_screen_4_private_label">Mark report as private</string>
    <string name="report_wizard_screen_4_private_text">Private reports will not be syndicated to other WildScan users</string>
    <string name="report_wizard_confirm_discard_title">Discard report?</string>
    <string name="report_wizard_confirm_discard_message">All the information will be discarded</string>
    <string name="report_wizard_warning_dialog_title">Warning!</string>
    <string name="cancel">Cancel</string>
    <string name="identify">Identify</string>
    <string name="set">Set</string>
</resources>