<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@android:color/white"
    tools:context=".WildscanMainActivity" >

    <FrameLayout
        android:id="@+id/dialogInfoLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info_title"
            android:scaleType="fitCenter"
            android:src="@drawable/wildscan_logo" />

        <TextView
            android:id="@+id/info_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </FrameLayout>

    <View
        android:id="@+id/dummy1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white" />
    <!--android:layout_above="@id/request"-->
    <FrameLayout
        android:id="@+id/dialogInfoMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/dialogInfoLogo"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/about_background" >

        <ScrollView
            android:id="@+id/dialogInfoSectionsScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/dialogInfoSections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

                <Button
                    android:id="@+id/dialogInfoBtnAbout"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="0"
                    android:text="@string/info_about" />

                <Button
                    android:id="@+id/dialogInfoBtnEula"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="1"
                    android:text="@string/info_eula" />

                <Button
                    android:id="@+id/dialogInfoBtnCustomer"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="2"
                    android:text="@string/info_consumer" />

                <Button
                    android:id="@+id/dialogInfoBtnResponder"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="3"
                    android:text="@string/info_responder" />

                <Button
                    android:id="@+id/dialogInfoBtnLawEnf"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="4"
                    android:text="@string/info_law_enforcement" />

                <Button
                    android:id="@+id/dialogInfoBtnLaws"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="5"
                    android:text="@string/info_national_laws" />

                <Button
                    android:id="@+id/dialogInfoBtnCredits"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="6"
                    android:text="@string/info_credits" />

                <Button
                    android:id="@+id/dialogInfoBtnContributors"
                    style="@style/AboutButtonStyle"
                    android:layout_height="wrap_content"
                    android:onClick="onClickInfoBtn"
                    android:tag="7"
                    android:text="@string/info_contributors" />

                <Button
                    android:id="@+id/dialogInfoBtnHelp"
                    style="@style/AboutButtonStyle"
                    android:onClick="onClickInfoBtn"
                    android:tag="8"
                    android:text="@string/info_help" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/dialogInfoContentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/dialogInfoSectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/about_title_bg"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/dialogInfoBtnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/about_title_bg"
                    android:onClick="onClickInfoSectionBack"
                    android:scaleType="center"
                    android:src="@drawable/ic_action_back" />

                <TextView
                    android:id="@+id/dialogInfoSectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/about_title_bg"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="AAAA BBBB"
                    android:textColor="@color/about_text"
                    android:textSize="@dimen/global_header_title_text_size" />
            </LinearLayout>

            <View
                android:id="@+id/dummy2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:background="@null" />

            <ScrollView
                android:id="@+id/dialogInfoWebContainter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/dummy2"
                android:layout_below="@id/dialogInfoSectionHeader"
                android:background="@color/about_content_bg" >
            </ScrollView>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>
