<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/eventsListHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_header_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/eventsListHeaderTitle"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/eventsListHeaderBtnShowOnMap"
            android:background="@color/header_item_bg_dark"
            android:gravity="center_vertical"
            android:text="@string/events_list_header_title"
            android:textColor="@color/header_item_fg"
            android:textSize="@dimen/global_header_title_text_size" />

        <Button
            android:id="@+id/eventsListHeaderBtnShowOnMap"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_toLeftOf="@+id/eventsListHeaderBtnFavorites"
        	android:paddingLeft="10dp"            
        	android:paddingRight="10dp"            
            android:background="@color/header_item_bg_med"
            android:gravity="center"
            android:onClick="onClickHeaderBtnShowOnMap"
            android:scaleType="fitCenter"
            android:src="@drawable/selector_header_fav"
            android:text="@string/events_list_header_btn_show_on_map"
            android:textColor="@color/header_item_fg"
            android:textSize="@dimen/global_header_button_text_size" />

        <Button
            android:visibility="gone"
            android:id="@id/eventsListHeaderBtnFavorites"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
        	android:paddingLeft="10dp"            
        	android:paddingRight="10dp"            
            android:background="@color/header_item_bg_light"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_header_search"
            android:text="@string/events_list_header_btn_favorites"
            android:textColor="@color/header_item_fg"
            android:textSize="@dimen/global_header_button_text_size" />
    </RelativeLayout>

	<fragment
	    android:id="@+id/eventsListListFragment"
	    android:tag="@string/events_list_fragment_tag"
	    android:name="org.freeland.wildscanlaos.EventListFragment"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/eventsListHeaderLayout"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
	    tools:layout="@layout/item_event_list" />

</RelativeLayout>